--- a/templates/canvas/confirm_delete_course.html
+++ b/templates/canvas/confirm_delete_course.html
@@ -1,5 +1,6 @@
 {% extends 'canvas/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 
 {% block title %}Confirm Delete | GradeBench Canvas{% endblock %}
 {% block page_title %}Confirm Delete Course{% endblock %}
@@ -10,10 +11,10 @@
     <div class="col-md-8">
         <div class="card">
             <div class="card-header bg-danger text-white">
-                <h4 class="card-title mb-0">Delete Canvas Course</h4>
+                <h4 class="card-title mb-0"><i class="fa fa-trash me-2"></i>Delete Canvas Course</h4>
             </div>
             <div class="card-body">
-                <div class="alert mb-4 p-4" style="background-color: #66615b; color: white; border: none;">
+                <div class="alert alert-secondary mb-4 p-4" role="alert">
                     <h4 class="alert-heading">You are about to delete the following course:</h4>
                     <p class="mb-3 fs-5"><strong>{{ course.course_code }}:</strong> {{ course.name }}</p>
                     
@@ -30,16 +31,14 @@
                 
                 <div class="row mt-4 justify-content-center">
                     <div class="col-md-5 mb-3 mb-md-0">
-                        <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-secondary btn-fill btn-lg btn-block w-100">
-                            <i class="fa fa-arrow-left"></i> Cancel
+                        <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-secondary btn-round btn-lg w-100">
+                            <i class="fa fa-arrow-left me-1"></i> Cancel
                         </a>
                     </div>
                     <div class="col-md-5">
                         <form method="post">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-danger btn-fill btn-lg btn-block w-100">
-                                <i class="fa fa-trash"></i> Delete Course
-                            </button>
+                            {% bootstrap_button button_type="submit" content='<i class="fa fa-trash me-1"></i> Delete Course' button_class="btn-danger btn-round btn-lg w-100" %}
                         </form>
                     </div>
                 </div>
